--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: shellcheck
-      uses: azohra/shell-linter@v0.2.0
+      uses: azohra/shell-linter@v0.3.0
+      with:
+          path: "*.sh"
