--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
+    - uses: maxim-lobanov/setup-xcode@v1.2.1
+       with:
+         xcode-version: latest-stable
     - run: bash boost.sh
     - name: Upload built boost.xcframework
       uses: actions/upload-artifact@v2
